# learning-data-engineering

./: .gitignore  LICENSE  README.md
data-engineering-zoomcamp/Module-1-Contenarization-and-Infrastructure-as-code/: notes.md
data-engineering-zoomcamp/Module-1-Contenarization-and-Infrastructure-as-code/homework-env/: Dockerfile  README.md  docker-compose.yaml  homework_solutions.sql  main.py  pyproject.toml
data-engineering-zoomcamp/Module-1-Contenarization-and-Infrastructure-as-code/learning-environment/: Dockerfile  README.md  docker-compose.yaml  ingest_data.py  pyproject.toml
data-engineering-zoomcamp/Module-2-Workflow Orchestration using Kestra/homework-env/: README.md  docker-compose.yml  homework(1).md
data-engineering-zoomcamp/Module-2-Workflow Orchestration using Kestra/homework-env/flows/: zoomcamp-homework-gcp_kv.yaml  zoomcamp-homework-gcp_setup.yaml  zoomcamp-homework-gcp_taxi_scheduled.yaml
data-engineering-zoomcamp/Module-2-Workflow Orchestration using Kestra/learning-env/: pyproject.toml
data-engineering-zoomcamp/Module-3-Data Warehousing with  BigQuery/homework-env/: Bigqueryhw.sql  README.md  load_yellow_taxi_data.py  main.py  pyproject.toml
data-engineering-zoomcamp/Module-3-Data Warehousing with  BigQuery/learning-env/: bigquery.sql
data-engineering-zoomcamp/Module-4-Analytics_Engineering_with_dbt/: .gitignore  pyproject.toml
data-engineering-zoomcamp/Module-4-Analytics_Engineering_with_dbt/taxi_rides_ny/macros/: get_vendor_names.sql
(+6 files in other folders)
