[project]
name = "learning-environment"
version = "0.1.0"
description = "A learning environment for me to practice dockerization"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.13.3",
    "click>=8.1.7",
    "fsspec>=2026.1.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pgcli>=4.4.0",
]
